--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -1,4 +1,5 @@
 <div class="jumbotron ng-scope">
+  <p ng-show="mensagem.texto">{{mensagem.texto}}</p>
   <img style="float: left" src="https://dswa5-01-ac.herokuapp.com/Logo.jpg" />
   <h1 class="text-center">Bem vindo ao IFSP</h1>
   <h3 class="text-center">Lista de Contatos</h3>
@@ -29,7 +30,8 @@
 <button class="btn btn-primary" ng-click="incrementa()">Novo</button>
 <br class="ng-scope" />
 <br class="ng-scope" />
-<p>Contatos cadastrados: {{contatos.length}}</p>
+<p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-hide="contatos.length">Não há contatos cadastrados</p>
 <div class="table-responsive">
   <table class="table table-hover">
     <tr>
@@ -38,10 +40,12 @@
       <th class="text-center">Ação</th>
     </tr>
     <tr ng-repeat="contato in contatos | filter: filtro">
-      <td><a>{{contato.nome}}</a></td>
+      <td><a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a></td>
       <td>{{contato.email}}</td>
       <td class="text-center">
-        <button class="btn btn-warning">Remover</button>
+        <button ng-click="remove(contato)" class="btn btn-warning">
+          Remover
+        </button>
       </td>
     </tr>
   </table>
