--- a/public/partials/contato.html
+++ b/public/partials/contato.html
@@ -1,35 +1,40 @@
 <h1 class="text-center">Contato</h1>
 <p ng-show="mensagem.texto">{{mensagem.texto}}</p>
 <form ng-submit="salva()" <div class="form-group">
-  <label for="name">Nome Completo</label>
-  <input
-    type="text"
-    class="form-control"
-    id="nome"
-    name="nome"
-    required
-    ng-model="contato.nome"
-  />
+  <div class="form-group">
+    <label for="name">Nome Completo</label>
+    <input
+      type="text"
+      class="form-control"
+      id="nome"
+      name="nome"
+      required
+      ng-model="contato.nome"
+    />
   </div>
   <div class="form-group">
-      <label for="email">Email</label>
-      <div class="input-group">
-          <span class="input-group-addon">@</span>
-          <input 
-          type="email" 
-          class="form-control" 
-          id="email" 
-          name="email" 
-          placeholder="exemplo@email.com" 
-          ng-model="contato.email" 
+    <label for="email">E-mail do Contato</label>
+    <div class="form-group">
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">@</span>
+        </div>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          name="email"
+          placeholder="exemplo@email.com"
+          ng-model="contato.email"
+          aria-label="Email"
+          aria-describedby="basic-addon1"
           required
-          />
+        />
       </div>
+    </div>
   </div>
   <div>
-      <button type="submit" class="btn btn-primary">
-        Salvar
-      </button>
-      <a href="#/" class="btn btn-default">Voltar</a>
+    <button type="submit" class="btn btn-primary">Salvar</button>
+    <a href="#/" class="btn btn-default">Voltar</a>
   </div>
 </form>
